Fix alignment (#493)

--- a/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/components/ErrorCard/ErrorCard.module.scss
+++ b/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/components/ErrorCard/ErrorCard.module.scss
@@ -2,6 +2,7 @@
 
 .errorCard {
     display: flex;
+    justify-content: space-between;
     border-bottom: 1px solid $border-light-gray;
     background-color: $primary-background-color;
     padding: $size-medium $size-medium $size-small $size-large;
